# metardu-industrial

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  SECURITY.md  deny.toml  index.html  package-lock.json  package.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  stale.yml
crates/metardu-core/: Cargo.toml
crates/metardu-core/fuzz/: Cargo.toml
crates/metardu-core/fuzz/fuzz_targets/: fuzz_las_header.rs  fuzz_las_points.rs  fuzz_ntrip_base64.rs  fuzz_rtcm_parse.rs
crates/metardu-core/src/: lib.rs
crates/metardu-core/src/marine/: mod.rs  s44.rs  svp.rs  tpu.rs
crates/metardu-core/src/mining/: csf.rs  dem.rs  dxf_import.rs  eom.rs  las.rs  license.rs  mod.rs  report.rs  report_counter.rs  volume.rs
crates/metardu-core/src/ntrip/: mod.rs
crates/metardu-core/src/triage/: mod.rs
crates/metardu-core/tests/: integration.rs
docs/: ACCESSIBILITY_TEST_PLAN.md  ARCHITECTURE.md  BACKEND_ARCHITECT_AUDIT.md  BRAND_GUARDIAN_AUDIT.md  CODE_REVIEWER_AUDIT.md  COMPETITIVE_ANALYSIS.md  GEOMATICS_GAP_ANALYSIS.md  GIS_AGENT_GAP_ANALYSIS.md  PRODUCT_VIABILITY_ASSESSMENT.md  QA_QC_ANALYSIS.md  ROADMAP.md  SECURITY_AUDIT.md  SKILLS_AUDIT.md  SRE_CRASH_RECOVERY.md  UX_RESEARCHER_AUDIT.md  WCAG_AUDIT.md
docs/manual/: FIRST_STOCKPILE.md  IPC_REFERENCE.md  PIPELINE_REFERENCE.md  USER_MANUAL.md
e2e/: package.json  playwright.config.ts
e2e/tests/: boot-sequence.spec.ts  dialogs.spec.ts  workspace-shell.spec.ts
metardu-eom-cli/: Cargo.toml
metardu-eom-cli/src/: main.rs
metardu-verify/: Cargo.toml
metardu-verify/src/: main.rs
scripts/: apply_enterprise_css.py  generate_pit_test.py  generate_stockpile.py  migrate_dialogs.py  migrate_dialogs_batch2.py  migrate_dialogs_batch3.py  migrate_dialogs_batch4.py  migrate_dialogs_batch5.py  migrate_dialogs_batch6.py  migrate_dialogs_batch6b.py  migrate_final5.py  migrate_final7.py  migrate_manual.py
skills/: INDEX.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: account.rs  ar_companion.rs  benchmarks.rs  cogo.rs  contours.rs  deliverable.rs  dem_render.rs  distributed.rs  error_context.rs  error_types.rs  export_formats.rs  i18n.rs  interpolation.rs  lib.rs  license.rs  main.rs  map_layout.rs  path_validation.rs  performance.rs  plugin_marketplace.rs  project.rs  recovery.rs  report_engine.rs  slice_editor.rs  streaming.rs  telemetry.rs  topology.rs  updater.rs  wasm_sandbox.rs
src-tauri/src/automation/: mod.rs  pipeline.rs  scheduler.rs  watcher.rs
src-tauri/src/commands/: account.rs  automation.rs  bottleneck_tools.rs  cogo.rs  contours.rs  deliverable.rs  eom.rs  gis_features.rs  marine.rs  mining.rs  ml.rs  mod.rs  monitoring.rs  pipelines.rs  qc.rs  realtime.rs  recovery.rs  sprint6.rs  sprint7.rs  sprint8.rs  streaming.rs
src-tauri/src/distributed/: mod.rs  server.rs
src-tauri/src/formats/: geotiff.rs  kongsberg_all.rs  las.rs  mod.rs  orthomosaic.rs  reson_s7k.rs  shapefile.rs  sss_xtf.rs
src-tauri/src/geodesy/: mod.rs
src-tauri/src/keys/: license_pub.pem
src-tauri/src/marine/: backscatter.rs  cross_section.rs  cube.rs  density_gates.rs  dredge.rs  mod.rs  qc_dashboard.rs  s44.rs  s57.rs  tidal_datums.rs  tidal_spline.rs  tpu.rs
src-tauri/src/mining/: change_detection.rs  csf.rs  drone_ingest.rs  highwall.rs  machine_control.rs  mod.rs  monitoring_4d.rs  survey_tools.rs  volume.rs
src-tauri/src/ml/: mod.rs
src-tauri/src/modules/: mod.rs  registry.rs
src-tauri/src/pipelines/: mod.rs  odm.rs
src-tauri/src/plugins/: dynamic_loader.rs  mod.rs  reference_plugin_template.rs
src-tauri/src/qc/: mod.rs  propagation.rs  range_checks.rs  verify.rs
src-tauri/src/realtime/: mod.rs  nmea.rs  rover.rs  tide.rs
src/components/: account-dialog.tsx  backscatter-mosaic-dialog.tsx  basemap-switcher.tsx  benchmark-dialog.tsx  blast-report-wizard.tsx  brand-logo.tsx  command-palette.tsx  cross-section-profiler-wizard.tsx  crs-switch-banner.tsx  csf-classification-dialog.tsx  cube-disambiguation-dialog.tsx  cube-surface-dialog.tsx  cube-surface-overlay.tsx  customizable-toolbar.tsx  customize-toolbar-dialog.tsx  deliverable-package-wizard.tsx  density-gates-tool.tsx  dialog-shell.tsx  dredge-audit-wizard.tsx  eom-auditor-dialog.tsx  eom-reconciliation-wizard.tsx  error-boundary.tsx  file-drop-overlay.tsx  file-input.tsx  highwall-monitoring-wizard.tsx  idw-interpolation-dialog.tsx  ipc-error-toast.tsx  keyboard-shortcuts-help.tsx  layout-profiles.tsx  license-manager-dialog.tsx  live-stream-panel.tsx  machine-control-tool.tsx  map-canvas.tsx  map-layout-dialog.tsx  map-overlays.tsx  mbes-survey-dialog.tsx  mine-grid-dialog.tsx  ml-classification-dialog.tsx  monitoring-4d-dialog.tsx  ntrip-dialog.tsx  (+35 more)
src/lib/: colorblind-palette.ts  crs-quickpicks.ts  crs-registry.ts  file-picker.ts  ipc-error-reporter.ts  project-templates.ts  report-profile.ts  tauri-ipc.ts  theme-auto.ts  tokens.ts  use-escape-key.ts  use-profile-tool.ts  use-viewport.ts
src/screens/: module-loading-screen.tsx  onboarding-screen.tsx  splash-screen.tsx  workspace-shell.tsx
src/stores/: app-store.ts  saved-views-store.ts  survey-store.ts  toolbar-store.ts  undo-store.ts
test-data/: design_surface.las  excavated_pit.las
