[package]
name = "metardu-industrial"
version = "0.1.0"
description = "Specialised desktop app for mining and marine survey workflows"
authors = ["error302"]
license = "MIT"
edition = "2021"
rust-version = "1.87"
default-run = "metardu-industrial"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "metardu_industrial_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "sync", "rt-multi-thread", "macros", "process", "net"] }
thiserror = "1"
serde_yaml = "0.9"
libloading = "0.8"
metardu-core = { path = "../crates/metardu-core" }
sha2 = "0.10"
base64 = "0.22"
rayon = "1"

# Geospatial core — opt-in via the 'geo' feature flag.
# These crates require system libs (libproj-dev, libgdal-dev) that aren't
# always available in dev environments. CI has them; for local dev the
# pure-Rust parsers cover the Phase 1 needs. Enable the 'geo' feature
# when you need real CRS reprojection (Phase 2 marine work) or GDAL raster
# operations.
proj = { version = "0.27", optional = true }
gdal = { version = "0.17", optional = true, features = ["bindgen"] }
pdal-sys = { version = "0.1", optional = true }
polars = { version = "0.42", optional = true, features = ["lazy", "csv", "parquet"] }
rusqlite = { version = "0.32", optional = true, features = ["bundled"] }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
arrow = { version = "52", optional = true }
parquet = { version = "52", optional = true }
# WASM runtime for pipeline script sandbox (behind 'wasm' feature flag)
wasmtime = { version = "21", optional = true, default-features = false, features = ["cranelift", "runtime"] }
# ZIP archive creation for Survey Deliverable Package (Sprint 5)
# Pure Rust — no system deps. ~120KB binary cost.
zip = { version = "2", default-features = false, features = ["deflate"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
# Enable real geospatial libraries (PROJ, GDAL, PDAL, etc.). Requires
# system libs: libproj-dev, libgdal-dev, libpdal-dev on Linux;
# proj/gdal via Homebrew on macOS; PROJ/GDAL SDK on Windows.
geo = [
    "dep:proj",
    "dep:gdal",
    "dep:pdal-sys",
    "dep:polars",
    "dep:rusqlite",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:arrow",
    "dep:parquet",
]
# Geo-lite: just PROJ for CRS reprojection, no GDAL/PDAL. Lighter build.
geo-proj = ["dep:proj", "dep:tracing", "dep:tracing-subscriber"]
# Enable WASM sandbox for pipeline scripts (requires wasmtime — large build dep)
wasm = ["dep:wasmtime"]
