[package]
name = "metardu-core"
version = "0.1.0"
edition = "2021"
description = "Shared geospatial processing core for MetaRDU Industrial and metardu-worker"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

# The marine module is the primary shared code — CUBE, TPU, S-44, S-57
# The mining module is also shared — CSF, volume, monitoring
