[package]
name = "metardu-core"
version = "0.1.0"
edition = "2021"
description = "Shared geospatial processing core for MetaRDU Industrial and metardu-worker"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
sha2 = { version = "0.10", features = ["oid"] }
hmac = "0.12"
rsa = { version = "0.9", features = ["pem", "sha2", "getrandom"] }
rand = "0.8"
base64 = "0.22"
rayon = "1"
printpdf = "0.7"
laz = "0.10"
dxf = "0.6"
kamadak-exif = "0.5"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
webpki-roots = "0.26"

[dev-dependencies]
tempfile = "3"
